--- a/ecommerce/main/templates/main/base.html
+++ b/ecommerce/main/templates/main/base.html
@@ -1020,7 +1020,7 @@
 
     {% block notify-product %}
     <!-- notification product -->
-    <div class="product-notification" id="dismiss">
+    <!-- <div class="product-notification" id="dismiss">
         <span onclick="dismiss();" class="btn-close" aria-hidden="true"></span>
         <div class="media">
             <img class="me-2" src="{% static 'main/images/layout-1/product/5.jpg' %}" alt="Generic placeholder image">
@@ -1029,7 +1029,7 @@
                 Cras sit amet nibh libero, in gravida nulla.
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- notification product -->
     {% endblock %}
 
