--- a/ecommerce/main/templates/main/about-page.html
+++ b/ecommerce/main/templates/main/about-page.html
@@ -172,7 +172,7 @@
 </g>
 </svg>
                     <div class="media-body">
-                        <h5>ONLINE PAYMENT</h5>
+                        <h5>Cash on delivary</h5>
                     </div>
                 </div>
             </div>
