--- a/ecommerce/main/templates/main/base.html
+++ b/ecommerce/main/templates/main/base.html
@@ -275,23 +275,7 @@
                       <img src="{% static 'main/images/layout-4/logo/ostromi2.png' %}" alt="logo" class="img-fluid  ">
                   </a>
                 </div>
-                <div class=" nav-block">
-                  <div class="nav-left">
-                    <nav class="navbar" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent">
-                      <button class="navbar-toggler" type="button"> <span class="navbar-icon"><i class="fa fa-arrow-down"></i></span> </button>
-                      <h5 class="mb-0  text-white title-font">Jwellery</h5> </nav>
-                    <div class="collapse show nav-desk" id="navbarToggleExternalContent">
-                      <ul class="nav-cat title-font">
-                          {% for category in cate %}
-                          {% if category.types == "0" %}
-                        <li><a href="#">{{category.category_name}}</a></li>
-                       
-                        {% endif %}
-                        {% endfor %}
-                      </ul>
-                    </div>
-                  </div>
-                </div>
+
               </div>
               <div class="menu-block">
 
@@ -301,87 +285,37 @@
                   </li>
                   <!--HOME-->
                   <li>
-                    <a class="light-menu-item" href="javascript:void(0)">Home</a>
-                    <ul>
-                      <li><a  href="index.html">mega store 1</a></li>
-                      <li><a  href="layout-2.html">mega store 2</a></li>
-                      <li><a  href="layout-3.html">mega store 3</a></li>
-                      <li><a  href="layout-4.html">mega store 4</a></li>
-                      <li><a  href="megastore.html">mega store 5</a></li>
-                      <li><a  href="layout-5.html">electronics</a></li>
-                      <li><a  href="layout-6.html">vegetable</a></li>
-                      <li><a  href="furniture.html">furniture</a></li>
-                      <li><a  href="cosmetic.html">cosmetic</a></li>
-                      <li><a  href="kids.html">kids</a></li>
-                      <li><a  href="tools.html">tools</a></li>
-                      <li><a  href="grocery.html">grocery</a></li>
-                      <li><a  href="pets.html">pets</a></li>
-                      <li><a  href="farming.html">farming</a></li>
-                      <li><a  href="digital-marketplace.html">digital marketplace</a></li>
-                    </ul>
+                    <a class="light-menu-item" href="{% url 'main' %}">Home</a>
+
                   </li>
                   <!--HOME-END-->
-                  <!--daraz-->
-                  <li>
-                    <a class="light-menu-item" href="javascript:void(0)">Daraz</a>
-                    <ul>
-                      <li><a href="category-page(left-sidebar).html">2 Piece</a></li>
-                      <li><a href="category-page(right-sidebar).html">3 Piece</a></li>
-                      <li><a href="category-page(no-sidebar).html">Wall Cover</a></li>
-                     
-                    </ul>
-                  </li>
-                  <!--daraz-END-->
+
                   <!--product-meu start-->
                   <li>
-                    <a  class="light-menu-item" href="javascript:void(0)">Bed
+                    <a  class="light-menu-item" href="{% url 'about' %}">About US
                   </a>
-                  <ul>
-                    <li><a href="category-page(left-sidebar).html">King Bed</a></li>
-                    <li><a href="category-page(right-sidebar).html">Queen Bed</a></li>
-                    <li><a href="category-page(no-sidebar).html">Low Bed</a></li>
-                    <li><a href="category-page(no-sidebar).html">Round-Head Bed</a></li>
-                  </ul>
+  
                   </li>
                   <!--product-meu end-->
 
                   <!--mega-meu start-->
                   <li>
-                    <a  class="light-menu-item" href="javascript:void(0)">Table
+                    <a  class="light-menu-item" href="{% url 'checkout' %}">Checkout
                   </a>
-                  <ul>
-                    <li><a href="category-page(left-sidebar).html">Plastic Table</a></li>
-                    <li><a href="category-page(right-sidebar).html">Plastic Table</a></li>
-                    <li><a href="category-page(no-sidebar).html">Low Bed</a></li>
-                    <li><a href="category-page(no-sidebar).html">Round-Head Bed</a></li>
-                  </ul>
+
                   </li>
                   <!--mega-meu end-->
 
                   <!--pages meu start-->
                   <li>
-                    <a  class="light-menu-item" href="javascript:void(0)">Chair
+                    <a  class="light-menu-item" href="{% url 'cart' %}">cart
                   </a>
-                  <ul>
-                    <li><a href="category-page(left-sidebar).html">Office Chair</a></li>
-                    <li><a href="category-page(right-sidebar).html">Study chair</a></li>
-                    <li><a href="category-page(right-sidebar).html">Plastic chair</a></li>
-                   
-                  </ul>
+
                   </li>
                   <!--product-end end-->
 
                   <!--blog-meu start-->
-                  <li>
-                    <a  class="light-menu-item" href="javascript:void(0)">Carpet
-                  </a>
-                  <ul>
-                    <li><a href="category-page(left-sidebar).html">PVC Carpet</a></li>
-                    <li><a href="category-page(right-sidebar).html">Galaicha</a></li>
-                    <li><a href="category-page(no-sidebar).html">Matrace</a></li>
-                  </ul>
-                  </li>
-                  <!--blog-meu end-->
+                 
                 </ul>
               </div>
               <div class="input-block">
@@ -395,117 +329,7 @@
                     </form>
                   </div>
                 </div>
-              <div class="category-right">
-                <div class="btn-group">
-                  <div class="gift-block" data-bs-toggle="dropdown">
-                    <div class="grif-icon"> <i class="icon-gift"></i> </div>
-                    <div class="gift-offer">
-                      <p>gift box</p> <span>Festivel Offer</span> </div>
-                  </div>
-                  <div class="dropdown-menu gift-dropdown">
-                    <div class="media">
-                      <div class="me-3"> <img src="../assets/images/icon/1.png" alt="Generic placeholder image"> </div>
-                      <div class="media-body">
-                        <h5 class="mt-0">Billion Days</h5>
-                        <p><img src="../assets/images/icon/currency.png" class="cash" alt="gift"> Flat Rs. 270 Rewards</p>
-                      </div>
-                    </div>
-                    <div class="media">
-                      <div class="me-3"> <img src="../assets/images/icon/2.png" alt="Generic placeholder image"> </div>
-                      <div class="media-body">
-                        <h5 class="mt-0">Fashion Discount</h5>
-                        <p><img src="../assets/images/icon/fire.png" class="fire" alt="gift">Extra 10% off (upto Rs. 10,000*) </p>
-                      </div>
-                    </div>
-                    <div class="media">
-                      <div class="me-3"> <img src="../assets/images/icon/3.png" alt="Generic placeholder image"> </div>
-                      <div class="media-body">
-                        <h5 class="mt-0">75% off Store</h5>
-                        <p>No coupon code is required.</p>
-                      </div>
-                    </div>
-                    <div class="media">
-                      <div class="me-3"> <img src="../assets/images/icon/6.png" alt="Generic placeholder image"> </div>
-                      <div class="media-body">
-                        <h5 class="mt-0">Upto 50% off</h5>
-                        <p>Buy popular phones under Rs.20.</p>
-                      </div>
-                    </div>
-                    <div class="media">
-                      <div class="me-3"> <img src="../assets/images/icon/5.png" alt="Generic placeholder image"> </div>
-                      <div class="media-body">
-                        <h5 class="mt-0">Beauty store</h5>
-                        <p><img src="../assets/images/icon/currency.png" class="cash" alt="gift"> Flat Rs. 270 Rewards</p>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="icon-block">
-                  <ul>
-                    <li class="mobile-search">
-                      <a href="javascript:void(0)">
-                        <svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                            viewBox="0 0 612.01 612.01" style="enable-background:new 0 0 612.01 612.01;"
-                           xml:space="preserve">
-                              <g>
-                                <g >
-                                  <g>
-                                    <path d="M606.209,578.714L448.198,423.228C489.576,378.272,515,318.817,515,253.393C514.98,113.439,399.704,0,257.493,0
-                                      C115.282,0,0.006,113.439,0.006,253.393s115.276,253.393,257.487,253.393c61.445,0,117.801-21.253,162.068-56.586
-                                      l158.624,156.099c7.729,7.614,20.277,7.614,28.006,0C613.938,598.686,613.938,586.328,606.209,578.714z M257.493,467.8
-                                      c-120.326,0-217.869-95.993-217.869-214.407S137.167,38.986,257.493,38.986c120.327,0,217.869,95.993,217.869,214.407
-                                      S377.82,467.8,257.493,467.8z"/>
-                                  </g>
-                                </g>
-                              </g>
-                        </svg>
-                      </a> 
-                    </li>
-                    {% if request.user.is_authenticated %}
 
-                    <li class="mobile-setting" >
-                        <a href="{% url 'logout' %}">
-                            <i class="fa fa-sign-out text-white"></i>
-
-                      </a> 
-                      </li>
-
-                    {% else %}
-                    <li class="mobile-setting" onclick="openAccount()">
-                      <a href="javascript:void(0)">
-                        <svg version="1.1"  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                           viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
-                        <g>
-                          <g>
-                            <path d="M256,0c-74.439,0-135,60.561-135,135s60.561,135,135,135s135-60.561,135-135S330.439,0,256,0z M256,240
-                              c-57.897,0-105-47.103-105-105c0-57.897,47.103-105,105-105c57.897,0,105,47.103,105,105C361,192.897,313.897,240,256,240z"/>
-                          </g>
-                        </g>
-                        <g>
-                          <g>
-                            <path d="M297.833,301h-83.667C144.964,301,76.669,332.951,31,401.458V512h450V401.458C435.397,333.05,367.121,301,297.833,301z
-                               M451.001,482H451H61v-71.363C96.031,360.683,152.952,331,214.167,331h83.667c61.215,0,118.135,29.683,153.167,79.637V482z"/>
-                          </g>
-                        </g>
-                        </svg>
-                    </a> 
-                    </li>
-                    {% endif %}
-                   
-                    
-                    
-                    
-                    <li class="mobile-cart item-count" onclick="openCart()">
-                      <a href="javascript:void(0)">                        
-                        <svg  enable-background="new 0 0 512 512"  viewBox="0 0 512 512"  xmlns="http://www.w3.org/2000/svg"><g><path d="m497 401.667c-415.684 0-397.149.077-397.175-.139-4.556-36.483-4.373-34.149-4.076-34.193 199.47-1.037-277.492.065 368.071.065 26.896 0 47.18-20.377 47.18-47.4v-203.25c0-19.7-16.025-35.755-35.725-35.79l-124.179-.214v-31.746c0-17.645-14.355-32-32-32h-29.972c-17.64 0-31.99 14.351-31.99 31.99v31.594l-133.21-.232-9.985-54.992c-2.667-14.694-15.443-25.36-30.378-25.36h-68.561c-8.284 0-15 6.716-15 15s6.716 15 15 15c72.595 0 69.219-.399 69.422.719 16.275 89.632 5.917 26.988 49.58 306.416l-38.389.2c-18.027.069-32.06 15.893-29.81 33.899l4.252 34.016c1.883 15.06 14.748 26.417 29.925 26.417h26.62c-18.8 36.504 7.827 80.333 49.067 80.333 41.221 0 67.876-43.813 49.067-80.333h142.866c-18.801 36.504 7.827 80.333 49.067 80.333 41.22 0 67.875-43.811 49.066-80.333h31.267c8.284 0 15-6.716 15-15s-6.716-15-15-15zm-209.865-352.677c0-1.097.893-1.99 1.99-1.99h29.972c1.103 0 2 .897 2 2v111c0 8.284 6.716 15 15 15h22.276l-46.75 46.779c-4.149 4.151-10.866 4.151-15.015 0l-46.751-46.779h22.277c8.284 0 15-6.716 15-15v-111.01zm-30 61.594v34.416h-25.039c-20.126 0-30.252 24.394-16.014 38.644l59.308 59.342c15.874 15.883 41.576 15.885 57.452 0l59.307-59.342c14.229-14.237 4.13-38.644-16.013-38.644h-25.039v-34.254l124.127.214c3.186.005 5.776 2.603 5.776 5.79v203.25c0 10.407-6.904 17.4-17.18 17.4h-299.412l-35.477-227.039zm-56.302 346.249c0 13.877-11.29 25.167-25.167 25.167s-25.166-11.29-25.166-25.167 11.29-25.167 25.167-25.167 25.166 11.291 25.166 25.167zm241 0c0 13.877-11.289 25.167-25.166 25.167s-25.167-11.29-25.167-25.167 11.29-25.167 25.167-25.167 25.166 11.291 25.166 25.167z"/></g></svg>                                                 
-                        <div class="item-count-contain item-whtie"> 3 </div>
-                      </a>
-                    </li>
-                  </ul>
-                  <div class="toggle-nav"><i class="fa fa-bars sidebar-bar"></i></div>            
-                </div>
-                
-              </div>
             </div>
           </div>
         </div>
@@ -549,11 +373,12 @@
                                     <p>It is a long established fact that a reader will be distracted by the readable
                                         content.</p>
                                     <ul class="sosiyal">
-                                        <li><a href="javascript:void(0)"><i class="fa fa-facebook"></i></a></li>
-                                        <li><a href="javascript:void(0)"><i class="fa fa-google-plus"></i></a></li>
-                                        <li><a href="javascript:void(0)"><i class="fa fa-twitter"></i></a></li>
-                                        <li><a href="javascript:void(0)"><i class="fa fa-instagram"></i></a></li>
-                                        <li><a href="javascript:void(0)"><i class="fa fa-rss"></i></a></li>
+                                        <li><a href="https://www.facebook.com/kamaltradersandjwellers"><i class="fa fa-facebook"></i></a></li>
+                                        
+                                        <li><a href="Tel:9814048146"><i class="fa fa-phone"></i></a></li>
+                                        <li><a href="Mailto:mail@Kamaltraders.com.np"><i class="fa fa-envelope"></i></a></li>
+                                        <li><a href="../admin"><i class="fa fa-terminal"></i></a></li>
+                                       
                                     </ul>
                                 </div>
                             </div>
@@ -563,11 +388,11 @@
                                 </div>
                                 <div class="footer-contant">
                                     <ul>
-                                        <li><a href="javascript:void(0)">about us</a></li>
-                                        <li><a href="javascript:void(0)">contact us</a></li>
-                                        <li><a href="javascript:void(0)">terms &amp; conditions</a></li>
-                                        <li><a href="javascript:void(0)">returns &amp; exchanges</a></li>
-                                        <li><a href="javascript:void(0)">shipping &amp; delivery</a></li>
+                                        <li><a href="{% url 'about' %}">about us</a></li>
+                                        
+                                        <li><a href="">terms &amp; conditions</a></li>
+                                        <li><a href="">returns &amp; exchanges</a></li>
+                                        <li><a href="">shipping &amp; delivery</a></li>
                                     </ul>
                                 </div>
                             </div>
