--- a/ecommerce/main/templates/main/index.html
+++ b/ecommerce/main/templates/main/index.html
@@ -7,20 +7,27 @@
         <div class="row slider-layout-4">
             <div class="col-xl-10 slider-slide ">
                 <div class="slide-1 no-arrow">
+                    {% for specialoffer in offer %}
                     <div>
                         <div class="slider-banner slide-banner-3">
                             <div class="slider-img">
                                 <ul class="layout4-slide-1">
-                                    <li id="img-1"><img src="{% static 'main/images/layout-4/slider/1.1.png' %}"
+                                    <li id="img-1"><img src="{{specialoffer.item.image.url}}"
                                             class="img-fluid" alt="slider"></li>
                                 </ul>
                             </div>
                             <div class="slider-banner-contain">
                                 <div>
+                                    {% if specialoffer.festiveoffer == True %}
+                                    <h5>festiveoffer grab it</h5>
+                                    {% elif specialoffer.sales == True %}
+                                    <h5>sales are here grab it quick</h5>
+                                    {% else %}
                                     <h5>last chance to Grab</h5>
-                                    <h3>headphones</h3>
-                                    <h1>new earphones</h1>
-                                    <h2>wireless headphone only $99</h2> <a href="product-page(left-sidebar).html"
+                                    {% endif %}
+                                    <h3>{{specialoffer.extraoffer}}</h3>
+                                    <h1>{{specialoffer.item.title}}</h1>
+                                    <h2>{{specialoffer.item.title}} discount {{specialoffer.discount}}%</h2> <a href="product-page(left-sidebar).html"
                                         class="btn btn-normal">
                                         shop now
                                     </a>
@@ -28,49 +35,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <div class="slider-banner slide-banner-3">
-                            <div class="slider-img">
-                                <ul class="layout4-slide-2">
-                                    <li id="img-2"><img src="{% static 'main/images/layout-4/slider/1.2.png' %}"
-                                            class="img-fluid" alt="slider"></li>
-                                </ul>
-                            </div>
-                            <div class="slider-banner-contain">
-                                <div>
-                                    <h5>exclusive launch offer</h5>
-                                    <h3>new range off</h3>
-                                    <h1>philips headephone</h1>
-                                    <h2>with rich bass</h2> <a href="product-page(left-sidebar).html"
-                                        class="btn btn-normal">
-                                        shop now
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="slider-banner slide-banner-3">
-                            <div class="slider-img">
-                                <ul class="layout4-slide-3 ">
-                                    <li id="img-3" class="slide-center"><img
-                                            src="{% static 'main/images/layout-4/slider/1.3.png' %}" class="img-fluid"
-                                            alt="slider"></li>
-                                </ul>
-                            </div>
-                            <div class="slider-banner-contain">
-                                <div>
-                                    <h5>providing customized</h5>
-                                    <h3>samsung CCTV</h3>
-                                    <h1>full hd solution</h1>
-                                    <h2>strength your sequrity</h2> <a href="product-page(left-sidebar).html"
-                                        class="btn btn-normal">
-                                        shop now
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+{% endfor %}
                 </div>
             </div>
         </div>
@@ -2614,7 +2579,7 @@
 <!--services end-->
 
 <!--box categroy start-->
-<section class="box-category section-pb-space">
+<!-- <section class="box-category section-pb-space">
     <div class="container-fluid ">
         <div class="row">
             <div class="col pl-0">
@@ -2700,7 +2665,7 @@
             </div>
         </div>
     </div>
-</section>
+</section> -->
 <!--box category end-->
 <!--testimonial start-->
 <section class="testimonial">
@@ -2708,51 +2673,21 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="slide-1 no-arrow">
+                    {% for team in team %}
                     <div>
                         <div class="testimonial-contain">
                             <div class="media">
-                                <div class="testimonial-img"> <img src="{% static 'main/images/testimonial/1.jpg' %}"
+                                <div class="testimonial-img"> <img src="{{team.Image.url}}"
                                         class="img-fluid rounded-circle  " alt="testimonial"> </div>
                                 <div class="media-body">
-                                    <h5>mark jecno</h5>
-                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                                        roots in a piece of classical Latin literature from 45 BC, making it over
-                                        2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
-                                        College in Virginia.</p>
+                                    <h5>{{team.Name}}</h5>
+                                    <p>{{team.Description}}.</p>
                                 </div>
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <div class="testimonial-contain">
-                            <div class="media">
-                                <div class="testimonial-img"> <img src="{% static 'main/images/testimonial/2.jpg' %}"
-                                        class="img-fluid rounded-circle  " alt="testimonial"> </div>
-                                <div class="media-body">
-                                    <h5>mark jecno</h5>
-                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                                        roots in a piece of classical Latin literature from 45 BC, making it over
-                                        2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
-                                        College in Virginia.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="testimonial-contain">
-                            <div class="media">
-                                <div class="testimonial-img"> <img src="{% static 'main/images/testimonial/3.jpg' %}"
-                                        class="img-fluid rounded-circle  " alt="testimonial"> </div>
-                                <div class="media-body">
-                                    <h5>mark jecno</h5>
-                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has
-                                        roots in a piece of classical Latin literature from 45 BC, making it over
-                                        2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney
-                                        College in Virginia.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    {% endfor %}
+
                 </div>
             </div>
         </div>
@@ -2869,7 +2804,7 @@
                         </g>
                     </svg>
                     <div class="media-body">
-                        <h5>ONLINE PAYMENT</h5>
+                        <h5>Cash On delivary</h5>
                     </div>
                 </div>
             </div>
