--- a/ecommerce/main/templates/main/product.html
+++ b/ecommerce/main/templates/main/product.html
@@ -74,7 +74,7 @@
                       </div>
                     </div>
                     <div class="product-buttons">
-                      <a href="{% url 'add-to-cart' item.pk %}"   id="cartEffect" class="btn cart-btn btn-normal tooltip-top" data-tippy-content="Add to cart">
+                      <a href="{% url 'add-to-cart' item.pk %}"   id="cartEffect" class="btn cart-btn btn-normal " data-tippy-content="Add to cart">
                         <i class="fa fa-shopping-cart"></i>
                         add to cart
                       </a>
