--- a/ecommerce/main/templates/main/index.html
+++ b/ecommerce/main/templates/main/index.html
@@ -5,7 +5,7 @@
 <section class="theme-slider section-py-space home-slide">
     <div class="custom-container">
         <div class="row slider-layout-4">
-            <div class="col-xl-10 slider-slide ">
+            <div class="col-xl-10 mr-5 slider-slide ">
                 <div class="slide-1 no-arrow">
                     {% for specialoffer in offer %}
                     <div>
