--- a/ecommerce/main/templates/main/cart.html
+++ b/ecommerce/main/templates/main/cart.html
@@ -74,7 +74,7 @@
             </div>
         </div>
         <div class="row cart-buttons">
-            <div class="col-12"><a href="javascript:void(0)" class="btn btn-normal">continue shopping</a> <a href="javascript:void(0)" class="btn btn-normal ms-3">check out</a></div>
+            <div class="col-12"><a href="javascript:void(0)" class="btn btn-normal">continue shopping</a> <a href="{% url 'checkout' %}" class="btn btn-normal ms-3">check out</a></div>
         </div>
     </div>
 </section>
